--- a/Accounts List/Base.lproj/Main.storyboard
+++ b/Accounts List/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Accounts-->
         <scene sceneID="eoX-0f-SWU">
             <objects>
-                <tableViewController id="ql6-Oz-EAx" customClass="AccountTableViewController" sceneMemberID="viewController">
+                <tableViewController title="Accounts" id="ql6-Oz-EAx" customClass="AccountTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Hnz-eS-hUC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,11 +27,53 @@
                             <outlet property="delegate" destination="ql6-Oz-EAx" id="QBs-9j-Pig"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Accounts" id="rrV-uG-Oro"/>
+                    <navigationItem key="navigationItem" title="Accounts" id="rrV-uG-Oro">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="0le-JO-Bzw">
+                            <connections>
+                                <segue destination="q6p-NY-7mq" kind="show" id="kXd-Im-ekj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nfS-7n-Pcz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="117" y="658"/>
+        </scene>
+        <!--Services-->
+        <scene sceneID="H6d-fk-XrI">
+            <objects>
+                <collectionViewController title="Services" id="q6p-NY-7mq" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ci3-mi-hZ6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UrE-cU-f5r">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Service Item" id="WQT-Xr-Nxo">
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="q6p-NY-7mq" id="ydS-t6-rd0"/>
+                            <outlet property="delegate" destination="q6p-NY-7mq" id="83W-OU-UdH"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Services" id="jwU-rJ-23K"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f0w-Zh-L04" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="912" y="658"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="f5x-dH-Do1">
