[Mod]: Project on disk reorganization

--- a/Accounts List/Base.lproj/Main.storyboard
+++ b/Accounts List/Base.lproj/Main.storyboard
@@ -39,10 +39,10 @@
             </objects>
             <point key="canvasLocation" x="117" y="658"/>
         </scene>
-        <!--Services-->
+        <!--Services Collection View Controller-->
         <scene sceneID="H6d-fk-XrI">
             <objects>
-                <collectionViewController title="Services" id="q6p-NY-7mq" sceneMemberID="viewController">
+                <collectionViewController title="Services Collection View Controller" id="q6p-NY-7mq" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ci3-mi-hZ6">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -54,7 +54,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Service Item" id="WQT-Xr-Nxo">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Service Cell" id="WQT-Xr-Nxo">
                                 <rect key="frame" x="0.0" y="64" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
